Worked on #89 – vertical scroll snap fixed
Looks like I've got it working for Chrome, Safari, and Firefox.

Still need to fix the horizontal scrolling for Safari, but this should
be just applying the same fix here as I did for the Projects view.

--- a/matthew-ia/src/styles/css/style.css
+++ b/matthew-ia/src/styles/css/style.css
@@ -1134,9 +1134,6 @@ dd {
 #root > div {
   margin: 0 0 0 10%; }
 
-body, .smooth-container {
-  scroll-behavior: smooth; }
-
 code {
   font-family: Inconsolata,Menlo,Monaco,Consolas,"Courier New",monospace;
   background-color: rgba(208, 208, 208, 0.3);
