--- a/matthew-ia/src/styles/sass/main.scss
+++ b/matthew-ia/src/styles/sass/main.scss
@@ -15,7 +15,7 @@
 #root {
 }
 
-body, .smooth-container { scroll-behavior: smooth; }
+//body, .smooth-container { scroll-behavior: smooth; }
 
 code {
   font-family: $font-family-monospace;
